[metadata]
name = Flask-CAS
version = attr: flask_cas.__version__
author = Cameron Brandon White
author_email = cameronbwhite90@gmail.com
maintainer = Cameron Brandon White
maintainer_email = cameronbwhite90@gmail.com
url = https://github.com/cameronbwhite/Flask-CAS
license = MIT
license_file = LICENSE
description = Flask extension for CAS
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License

[options]
zip_safe = false
packages = find:
include_package_data = true
python_requires = >= 3.6
test_suite = nose.collector
install_requires =
    Flask
    xmltodict
    blinker
tests_require = 
    Nose
    Mock

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .gitignore, .eggs, __pycache__, tests/, docs/, build/, dist/, .venv/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
